@startuml

title __LOGIN's Class Diagram__\n

  namespace com.example.thetrempiada {
    namespace login {
      class com.example.thetrempiada.login.LoginActivity {
          {static} + sp : SharedPreferences
          - btnLogin : Button
          - btnRegister : Button
          - emailContainer : TextInputLayout
          - emailValid : boolean
          - firebaseAuth : FirebaseAuth
          - forgotPassword : TextView
          - logEmail : TextInputEditText
          - logPassword : TextInputEditText
          - passwordContainer : TextInputLayout
          - passwordValid : boolean
          - progressBar : ProgressBar
          - remember : SwitchMaterial
          - resetPasswordEmailValid : boolean
          # onCreate()
      }
    }
  }
  

  namespace com.example.thetrempiada {
    namespace login {
      class com.example.thetrempiada.login.SignUpActivity {
          {static} - GENDER_PATHS : String[]
          {static} - TAG : String
          {static} - TYPE_PATHS : String[]
          - confirmPasswordContainer : TextInputLayout
          - confirmPasswordValid : boolean
          - emailContainer : TextInputLayout
          - emailValid : boolean
          - firebaseAuth : FirebaseAuth
          - genderSelected : boolean
          - nameContainer : TextInputLayout
          - nameValid : boolean
          - passwordContainer : TextInputLayout
          - passwordValid : boolean
          - progressBar : ProgressBar
          - regAge : TextInputEditText
          - regConfirmPassword : TextInputEditText
          - regEmail : TextInputEditText
          - regGender : AutoCompleteTextView
          - regName : TextInputEditText
          - regPassword : TextInputEditText
          - regType : AutoCompleteTextView
          - register : Button
          - typeSelected : boolean
          # onCreate()
          - registerUser()
      }
    }
  }
  

  com.example.thetrempiada.login.LoginActivity -up-|> com.example.thetrempiada.data.BaseActivity
  com.example.thetrempiada.login.SignUpActivity -up-|> com.example.thetrempiada.data.BaseActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
